[project]
name = "pvt"
license = { file = "LICENSE" }
version = "0.0.5"
authors = [{ name = "Sean Tronsen", email = "sean.tronsen@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3.12"]

dependencies = [
  "numpy==2.*",
  "opencv-contrib-python-headless==4.11.*",
  "pyside6==6.*",
  "pyqtgraph==0.13.*",
  # "pyopengl==3.1.*",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark", "pytest-qt", "pytest-xdist", "pytest-mock"]


[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true


# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
